[gd_scene load_steps=2 format=3 uid="uid://1xtuoi8e2w4j"]

[ext_resource type="Script" path="res://scripts/templates/chat/chat.gd" id="1"]

[node name="ChatTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 100.0

[node name="HeaderBackground" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(1920, 104)
layout_mode = 2
color = Color(0.337255, 0.45098, 0.596078, 1)

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer/HeaderBackground"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0

[node name="HeaderText" type="Label" parent="VBoxContainer/HeaderBackground/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CHAT"

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderBackground/HeaderContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "x"
flat = true

[node name="BodyBackground" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 980)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.133333, 0.117647, 0.164706, 1)

[node name="Container" type="VBoxContainer" parent="VBoxContainer/BodyBackground"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="pressed" from="VBoxContainer/HeaderBackground/HeaderContainer/CloseButton" to="." method="next_scene"]
